=======================================================================
                  SIESTA CHANGES: TOP IS MOST RECENT
=======================================================================

** CHANGES ALONG siesta-3 branch
------------------------------------------------------------------------
2012-03-29  8:00:00 GMT Alberto Garcia <albertog@icmab.es>   3.1-pl5
Close netCDF file descriptors for DM and DMHS files

The descriptors for the DM.nc and DMHS.nc netCDF files are kept open
during the SCF cycle, but should be closed at the end of it to avoid
resource exhaustion in, say, MD runs. This was not done due to a
programming error.  They are now closed at the beginning of the next
SCF cycle.

(Thanks to Nick Papior Andersen)

modified:
  Src/iodm_netcdf.F90
  Src/iodmhs_netcdf.F90

------------------------------------------------------------------------
2012-02-23  9:30:00 GMT Alberto Garcia <albertog@icmab.es>   3.1-pl4
Update of Andrei Postnikov's utilities to V0.4

Added also the fmpdos program, an alternative to pdosxml.

added:
  Util/Contrib/APostnikov/00README
  Util/Contrib/APostnikov/fmpdos.f
  Util/Contrib/APostnikov/test_mdc.f
modified:
  Util/Contrib/APostnikov/Makefile
  Util/Contrib/APostnikov/README
  Util/Contrib/APostnikov/eig2bxsf.f
  Util/Contrib/APostnikov/md2axsf.f
  Util/Contrib/APostnikov/rho2xsf.f
  Util/Contrib/APostnikov/vib2xsf.f
  Util/Contrib/APostnikov/wraxsf1.f
  Util/Contrib/APostnikov/wraxsf2.f

------------------------------------------------------------------------
2011-10-03  10:15:00 GMT Alberto Garcia <albertog@icmab.es>   3.1.1
Release bugfix siesta-3.1.1

Update version string. No changes to the manual

------------------------------------------------------------------------
2011-10-03  10:10:00 GMT Alberto Garcia <albertog@icmab.es>   3.1-pl3
Include missing LDFLAGS symbol in some Util makefiles

modified:
  Util/COOP/Makefile
  Util/Contrib/APostnikov/Makefile
  Util/test-xml/makefile
